--- a/2-positions/position-style.css
+++ b/2-positions/position-style.css
@@ -154,3 +154,76 @@ body {
     height: 40px;
     font-weight: 600;
 }
+
+.zomato-box{
+    width: 800px;
+    border: none;
+    margin: 10px auto;
+    position: relative;
+}
+
+.zomato-img{
+    width: 100%;
+    height: 350px;
+}
+
+.zoma-name{
+    color: white;
+    font-weight: 700;
+    font-size: 70px;
+    position: absolute;
+    top: 27px;
+    left: 300px;
+}
+.zoma-desc{
+    position: absolute;
+    top: 150px;
+    left: 130px;
+    font-size: 32px;
+    color: white;
+}
+
+.zoma-search{
+
+}
+
+.profile-box{
+    width: 600px;
+    margin: 0 auto;
+    border: 20px solid rgb(243,242,239);
+    /*border: 3px solid red;*/
+    position: relative;
+}
+
+.profile-bg-img{
+    width: 100%;
+    border-top-right-radius: 22px;
+    border-top-left-radius: 22px;
+    height: 150px;
+
+}
+
+.profile-img{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    position: absolute;
+    top: 90px;
+    left: 240px;
+    border: 4px solid white;
+}
+
+.profile-name{
+    font-size: 33px;
+    font-weight: 800;
+    margin-top: 75px;
+    text-align: center;
+}
+
+.profile-desc{
+    font-size: 28px;
+    font-weight: 600;
+    margin-top: -16px;
+    text-align: center;
+    color: rgb(133,133,133); ;
+}
