position assessment three - zomato search bar

--- a/2-positions/position-style.css
+++ b/2-positions/position-style.css
@@ -183,8 +183,63 @@ body {
     color: white;
 }
 
-.zoma-search{
+.zoma-search-box{
+    background-color: white;
+    height: 40px;
+    border-radius: 8px;
+    position: absolute;
+    top: 250px;
+    left: 130px;
+    width: 620px;
+}
 
+.zoma-search-indise-align{
+    position: relative;
+}
+
+.zoma-location-icon{
+    width: 25px;
+    height: 22px;
+    margin-top: 10px;
+    padding-left: 7px;
+}
+
+.zoma-location-name{
+    color: rgb(133,133,133);
+    position: absolute;
+    top: -4px;
+    left: 36px;
+}
+.zoma-trio-icon{
+    width: 10px;
+    height: 13px;
+    position: absolute;
+    top: 14px;
+    left: 180px;
+}
+
+.zoma-vertical-lign{
+    position: absolute;
+    top: 8px;
+    left: 205px;
+    border-left: 2px solid rgb(133,133,133);;
+    width: 2px;
+    height: 25px;
+}
+
+.zoma-search-icon{
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    top: 12px;
+    left: 220px;
+}
+
+.zoma-search-content{
+    color: rgb(133,133,133);
+    position: absolute;
+    top: -4px;
+    left: 250px;
 }
 
 .profile-box{
@@ -225,5 +280,5 @@ body {
     font-weight: 600;
     margin-top: -16px;
     text-align: center;
-    color: rgb(133,133,133); ;
+    color: rgb(133,133,133);
 }
