--- a/3-felx-airbnbclone/airbnbclone-style.css
+++ b/3-felx-airbnbclone/airbnbclone-style.css
@@ -1,7 +1,10 @@
+body{
+    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
+
 header{
     color: rgb(34,34,34);
     background-color: rgb(247,247,247);
-    font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
     font-weight: 500;
     text-decoration: underline;
     text-align: center;
@@ -9,4 +12,96 @@ header{
     padding: 24px;
     font-size: 17px;
     text-underline-offset: 2px;
+}
+
+.navbar-border{
+    border-bottom: 1px solid lightgray;
+    padding: 23px;
+    border-top: 1px solid lightgray;
+}
+.navbar-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 50px auto;
+}
+
+.logo{
+    color: rgb(255,56,92);
+    /*margin-left: -18px;*/
+}
+
+.quick-search{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 20px;
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    height: 45px;
+    width: 388px;
+}
+.anywhere-text{
+    padding: 10px;
+}
+.horizontal-line-1{
+    border-right: 1px solid lightgray;
+    height: 25px;
+    /*width: 30px;*/
+}
+
+.anywhere-week{
+
+}
+
+.horizontal-line-2{
+    border-right: 2px solid lightgray;
+    height: 20px;
+}
+
+.add-guests-text{
+    color: rgb(185,185,185);
+}
+
+.search-icon{
+    background-color: rgb(255,56,92);
+    color: white;
+    border: 1px solid lightgray;
+    padding: 8px;
+    border-radius: 50%;
+    margin-right: 7px;
+
+}
+
+.profile-items{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+}
+
+.profile-airbnb-text{
+
+}
+
+.globe-icon{
+
+}
+
+.profile-menus{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-radius: 28px;
+    padding: 8px;
+}
+.profile-menus:hover{
+
+}
+
+.quick-location{
+    display: flex;
+    margin: 0px 70px auto;
+    justify-content: space-between;
 }
