--- a/3-felx-airbnbclone/airbnbclone-style.css
+++ b/3-felx-airbnbclone/airbnbclone-style.css
@@ -102,6 +102,71 @@ header{
 
 .quick-location{
     display: flex;
-    margin: 0px 70px auto;
-    justify-content: space-between;
+    margin: 20px 70px auto;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.left-arrow{
+    border: 1px solid lightgray;
+    padding: 8px;
+    border-radius: 50%;
+    transform: rotate(180deg);
+}
+.right-arrow{
+    border: 1px solid lightgray;
+    padding: 8px;
+    border-radius: 50%;
+}
+
+.loca-item-1{
+    /*margin: auto;*/
+}
+
+.loca-item-1-img{
+    width: 36px;
+    height: 36px;
+    margin: 0px 12px ;
+}
+
+.loca-item-1-text{
+    margin: auto;
+    font-size: 15px;
+}
+
+.filter-items{
+    display: flex;
+    gap: 10px;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid lightgray;
+    border-radius: 10px;
+    padding: 10px;
+    height: 27px;
+    width: 75px;
+}
+
+.filter-text{
+    font-size: 16px;
+}
+
+.tax-items{
+    border: 1px solid lightgray;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 8px;
+    border-radius: 10px;
+    width: 240px;
+    height: 27px;
+    margin-right: -25px;
+}
+.display-taxes-text{
+    font-size: 16px;
+}
+
+.toggle-img{
+    color: gray;
+    margin-left: 10px;
+
 }
